refactor: ajustar classes referentes ao processo de selecao para utilizar records para objetos de entrada e saida de dados